# test_cmake_add_library

./: .gitignore  CMakeLists.txt  README.md
include/: some.h
src/: some.cpp  things.h
